# Cad-PID-Instrument-Numbering

./: .gitignore  CHANGELOG.md  README.md  USAGE.md  backup_step2_run.py  build.bat  pyproject.toml  run.py  version_info.txt
auto_numbering/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
auto_numbering/config/: version_info.txt
auto_numbering/scripts/: build.bat
auto_numbering/src/: __init__.py  acad_com.py  config.py  numbering.py  version.py
auto_numbering/src/ui/: code_selector.py  main_window.py  number_config.py  tag_selector.py
backup_final/: .gitignore  README.md  run.py  自动仪表编号V5.0.3.lsp
backup_step3_src/: acad_com.py  block_analyzer.py
batch_attr_color/: README.md  requirements.txt  run.py
batch_attr_color/src/: __init__.py  acad_com.py  config.py  main_window.py
scripts/: build.bat
skills/: SKILL.md
src/: acad_com.py  block_analyzer.py  config.py  numbering.py
src/ui/: __init__.py  main_window.py
